--- a/Scraping/la_liga_player_scraper.ipynb
+++ b/Scraping/la_liga_player_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,9 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import  expected_conditions as EC \n",
-    "from selenium.common.exceptions import TImeoutException, NoSuchElementException, taleElementReferenceException\n",
+    "from selenium.common.exceptions import TimeoutException, NoSuchElementException, StaleElementReferenceException\n",
     "\n",
-    "ctypes.windll.kernal32.SetThreadExecutionState(x80000002) # stops sleep (windows)\n",
-    "\n",
-    "options = webdriver.ChromeOptions()\n",
-    "driver = webdriver.Chrome(options=options)"
+    "# ctypes.windll.kernal32.SetThreadExecutionState(x80000002) # stops sleep (windows)\n"
    ]
   },
   {
@@ -28,6 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "options = webdriver.ChromeOptions()\n",
+    "driver = webdriver.Chrome(options=options)\n",
+    "\n",
     "driver.get('https://www.laliga.com/en-GB/laliga-easports/clubs')"
    ]
   },
@@ -48,8 +48,8 @@
     "        wait = WebDriverWait(driver, 10).until(\n",
     "            EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 kYCCIm'))\n",
     "        )\n",
-    "        club_names = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 kYCCIm')\n",
-    "        for element in club_names:\n",
+    "        club_names_elements = driver.find_elements(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 kYCCIm')\n",
+    "        for element in club_names_elements:\n",
     "            clubs.append(element.text)\n",
     "\n",
     "        print(\"Club names extracted:\", clubs)\n",
@@ -59,6 +59,9 @@
     "        ) \n",
     "        club_links = driver.find_elements(By.CLASS_NAME, 'link')\n",
     "        for element in club_links:  \n",
+    "            if element.text in clubs:\n",
+    "                element.click()\n",
+    "                print(f\"Clicked link {element.text}\")\n",
     "\n",
     "        break\n",
     "    except TimeoutException:\n",
@@ -66,7 +69,9 @@
     "        print(f\"Timeout exception occured. Attempt {retry_attempts} of {max_retries + 1}\")\n",
     "        if retry_attempts > max_retries:\n",
     "            print('Max retries reached. Stopping script')\n",
-    "\n"
+    "\n",
+    "if not clubs:\n",
+    "    print(\"No club names were found\")\n"
    ]
   },
   {
