--- a/Scraping/la_liga_player_scraper.ipynb
+++ b/Scraping/la_liga_player_scraper.ipynb
@@ -40,10 +40,14 @@
     "retry_attempts = 0\n",
     "max_retries = 1\n",
     "clubs = []\n",
-    "\n",
+    "collected_data = []\n",
+    "processed_clubs = set()\n",
     "\n",
     "while retry_attempts <= max_retries:\n",
     "    try:\n",
+    "\n",
+    "        clubs.clear()\n",
+    "\n",
     "\n",
     "        wait = WebDriverWait(driver, 10).until(\n",
     "            EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 kYCCIm'))\n",
@@ -54,42 +58,63 @@
     "\n",
     "        print(\"Club names extracted:\", clubs)\n",
     "\n",
+    "\n",
     "        wait = WebDriverWait(driver, 10).until(\n",
     "            EC.presence_of_all_elements_located((By.CLASS_NAME, 'link'))\n",
     "        ) \n",
     "        club_links = driver.find_elements(By.CLASS_NAME, 'link')\n",
+    "        \n",
+    "\n",
     "        for element in club_links:  \n",
-    "            if element.text in clubs:\n",
-    "                element.click()\n",
-    "                print(f\"Clicked link {element.text}\")\n",
+    "            club_name = element.text\n",
+    "\n",
+    "            if club_name in processed_clubs:\n",
+    "                print(f\"Skipping {club_name} - already processed\")\n",
+    "                continue\n",
+    "\n",
+    "\n",
+    "            element.click()\n",
+    "            print(f\"Clicked link for {club_name}\")\n",
+    "            \n",
+    "\n",
+    "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0')))\n",
+    "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 dUHLTw')))\n",
+    "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 bDmhbs')))\n",
+    "\n",
+    "            club_name_extracted = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0').text\n",
+    "            player_name = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 dUHLTw').text\n",
+    "            player_position = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 bDmhbs').text\n",
+    "\n",
+    "            club_info = {\n",
+    "                \"Club Name\": club_name_extracted, \n",
+    "                \"Player Name\": player_name,\n",
+    "                \"Player Position\": player_position\n",
+    "            }\n",
+    "            collected_data.append(club_info)\n",
+    "\n",
+    "            print(f\"Collected data for {club_name_extracted}: {club_info}\")\n",
+    "            processed_clubs.add(club_name)\n",
+    "\n",
+    "\n",
+    "            driver.back()\n",
+    "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'link')))\n",
+    "            print(\"Returned to the main page.\")\n",
+    "            break\n",
     "\n",
     "        break\n",
+    "\n",
     "    except TimeoutException:\n",
     "        retry_attempts += 1\n",
-    "        print(f\"Timeout exception occured. Attempt {retry_attempts} of {max_retries + 1}\")\n",
+    "        print(f\"Timeout exception occurred. Attempt {retry_attempts} of {max_retries + 1}\")\n",
     "        if retry_attempts > max_retries:\n",
-    "            print('Max retries reached. Stopping script')\n",
+    "            print(\"Max retries reached. Stopping script\")\n",
     "\n",
     "if not clubs:\n",
-    "    print(\"No club names were found\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"link\" target=\"_self\" globaldata=\"[object Object]\" datachangelang=\"[object Object]\" gptbase=\"/laliga-easports/clubes\" href=\"/en-GB/clubs/athletic-club/squad\"><div class=\"styled__AvatarContainer-sc-fyva03-2 fpOkUs\"><div class=\"styled__AvatarContainer-sc-1cljep8-0 kTyNMd\">\n",
-    "\n",
-    "<img src=\"https://assets.laliga.com/squad/2024/t174/p564564/512x512/p564564_t174_2024_1_003_000.png\" class=\"styled__ImageStyled-sc-17v9b6o-0 coeclD\">\n",
-    "\n",
-    "<h2 class=\"styled__TextStyled-sc-1mby3k1-0 kYCCIm\">Atlético de Madrid</h2>\n",
-    "\n",
-    "<h2 class=\"styled__TextStyled-sc-1mby3k1-0 kYCCIm\">Athletic Club</h2>\n",
-    "\n",
-    "        wait = WebDriverWait(driver, 10).until(\n",
-    "            EC.presence_of_all_elements_located((By.CLASS_NAME, 'link'))\n",
-    "        ) \n",
-    "        club_links = driver.find_elements(By.CLASS_NAME, 'link')\n"
+    "    print(\"No club names were found\")\n",
+    "elif not collected_data:\n",
+    "    print(\"No data was collected. There may have been an issue.\")\n",
+    "else:\n",
+    "    print(\"Data collection completed successfully.\")\n"
    ]
   }
  ],
