--- a/Scraping/la_liga_player_scraper.ipynb
+++ b/Scraping/la_liga_player_scraper.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import time \n",
+    "import os\n",
+    "import requests\n",
     "import re\n",
     "import ctypes\n",
     "import pandas as pd \n",
@@ -37,6 +39,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_folder = 'player_images'\n",
+    "if not os.path.exists(image_folder):\n",
+    "    os.makedirs(image_folder)\n",
+    "\n",
     "retry_attempts = 0\n",
     "max_retries = 1\n",
     "clubs = []\n",
@@ -58,10 +64,10 @@
     "\n",
     "        wait = WebDriverWait(driver, 10).until(\n",
     "            EC.presence_of_all_elements_located((By.CLASS_NAME, 'link'))\n",
-    "        ) \n",
+    "        )\n",
     "        club_links = driver.find_elements(By.CLASS_NAME, 'link')\n",
-    "        \n",
-    "        for element in club_links:  \n",
+    "\n",
+    "        for element in club_links:\n",
     "            club_name = element.text\n",
     "\n",
     "            if club_name in processed_clubs:\n",
@@ -70,7 +76,7 @@
     "\n",
     "            element.click()\n",
     "            print(f\"Clicked link for {club_name}\")\n",
-    "            \n",
+    "\n",
     "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0')))\n",
     "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 dUHLTw')))\n",
     "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 bDmhbs')))\n",
@@ -79,8 +85,23 @@
     "            player_name = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 dUHLTw').text\n",
     "            player_position = driver.find_element(By.CLASS_NAME, 'styled__TextStyled-sc-1mby3k1-0 bDmhbs').text\n",
     "\n",
+    "            image_element = driver.find_element(By.CLASS_NAME, 'styled__ImageStyled-sc-17v9b6o-0')\n",
+    "            image_url = image_element.get_attribute('src')\n",
+    "            image_filename = os.path.join(image_folder, f\"{player_name}.jpg\")\n",
+    "\n",
+    "            try:\n",
+    "                response = requests.get(image_url)\n",
+    "                if response.status_code == 200:\n",
+    "                    with open(image_filename, 'wb') as file:\n",
+    "                        file.write(response.content)\n",
+    "                    print(f\"Downloaded image for {player_name}: {image_filename}\")\n",
+    "                else:\n",
+    "                    print(f\"Failed to download image for {player_name}\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error downloading image: {e}\")\n",
+    "\n",
     "            club_info = {\n",
-    "                \"Club Name\": club_name_extracted, \n",
+    "                \"Club Name\": club_name_extracted,\n",
     "                \"Player Name\": player_name,\n",
     "                \"Player Position\": player_position\n",
     "            }\n",
@@ -88,7 +109,6 @@
     "\n",
     "            print(f\"Collected data for {club_name_extracted}: {club_info}\")\n",
     "            processed_clubs.add(club_name)\n",
-    "\n",
     "\n",
     "            driver.back()\n",
     "            wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'link')))\n",
